[gd_scene load_steps=9 format=3 uid="uid://b10p8cmn5knos"]

[ext_resource type="Script" path="res://pianohit.gd" id="1_8tmdu"]
[ext_resource type="Texture2D" uid="uid://bd66pqm17okjo" path="res://Assets/Piano/piano.png" id="1_72chi"]
[ext_resource type="Texture2D" uid="uid://c0jhpg2sqovy6" path="res://Assets/Piano/pianotop.png" id="2_0c46o"]
[ext_resource type="AudioStream" uid="uid://bvaio7kwhxjuu" path="res://Sounds/piano.mp3" id="4_pl2ix"]
[ext_resource type="Texture2D" uid="uid://ctw271kj1nsun" path="res://Pictures/String.png" id="5_f3sew"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k8acn"]
size = Vector2(162, 143)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4qq87"]
size = Vector2(185, 153)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k3l6p"]
size = Vector2(84, 119)

[node name="piano" type="Node2D"]

[node name="RigidBody2D" type="RigidBody2D" parent="."]
script = ExtResource("1_8tmdu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2(-10, -85.5)
shape = SubResource("RectangleShape2D_k8acn")

[node name="Sprite2D" type="Sprite2D" parent="RigidBody2D"]
position = Vector2(-6, -121)
scale = Vector2(0.613238, 0.679532)
texture = ExtResource("1_72chi")

[node name="Area2D" type="Area2D" parent="RigidBody2D"]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D/Area2D"]
position = Vector2(-3.5, -86.5)
shape = SubResource("RectangleShape2D_4qq87")

[node name="PinJoint2D" type="PinJoint2D" parent="RigidBody2D/Area2D"]
position = Vector2(-81, -151)
node_a = NodePath("../..")
node_b = NodePath("../../RigidBody2D2")
angular_limit_lower = -1.5708

[node name="RigidBody2D2" type="RigidBody2D" parent="RigidBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D/RigidBody2D2"]
position = Vector2(-50, -206)
shape = SubResource("RectangleShape2D_k3l6p")

[node name="Sprite2D" type="Sprite2D" parent="RigidBody2D/RigidBody2D2"]
position = Vector2(-10, -183)
rotation = -0.785398
scale = Vector2(0.638816, 0.638816)
texture = ExtResource("2_0c46o")

[node name="crash" type="AudioStreamPlayer2D" parent="RigidBody2D"]
stream = ExtResource("4_pl2ix")

[node name="String" type="Node2D" parent="RigidBody2D"]
position = Vector2(-1.0177, -97.7987)

[node name="Sprite2D" type="Sprite2D" parent="RigidBody2D/String"]
position = Vector2(2, 1.19209e-07)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_f3sew")

[node name="Label" type="Label" parent="RigidBody2D/String"]
offset_left = 14.0
offset_top = -18.0
offset_right = 54.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 25
text = "+1"

[connection signal="body_entered" from="RigidBody2D" to="RigidBody2D" method="_on_body_entered"]
[connection signal="area_entered" from="RigidBody2D/Area2D" to="RigidBody2D" method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="RigidBody2D/Area2D" to="RigidBody2D" method="_on_area_2d_body_entered"]
